--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.24",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "algebra-latex": "^2.0.3",
+    "desmos": "^1.5.4",
+    "mathjs": "^9.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-mathquill": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.1"
