--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mathjs": "^9.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-matrix": "^1.0.3",
     "react-mathquill": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
