--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "algebra-latex": "^2.0.3",
+    "bignumber.js": "^9.0.1",
     "desmos": "^1.5.4",
+    "eventemitter2": "^6.4.4",
+    "linear-equation-system": "^1.1.1",
+    "luqr": "^0.3.0",
     "mathjs": "^9.3.0",
+    "na-gaussian-elimination": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-matrix": "^1.0.3",
