--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
-sudo: required language: node_js
+sudo: required
+language: node_js
 node_js:
-    - "stable"
-    
-services: 
-    - docker
-before_install: 
-    - docker build -t wilpat/sample-app -f Dockerfile.dev .script:     
-    - docker run -e CI=true wilpat/sample-app npm run test -- --coverage
+  - "stable"
+
+services:
+  - docker
+
+before_install:
+  - docker build -t wilpat/sample-app -f Dockerfile.dev .
+script:
+  - docker run -e CI=true wilpat/sample-app npm run test -- --coverage
