--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
-addons:
-  apt:
-    packages:
-      - docker-ce
-script:
-  - docker-compose up
+language: node_js
+ node_js:
+ - "stable"
+ cache:
+ directories:
+   - node_modules
+ script:
+ - npm test
+ - npm run build
